Alpha 8.1.17 - 17th January 2022

- Fix for a crash when comparing very similar yet differently constructed item

Alpha 8.1.16 - 15th January 2022

- Added weaver profession for weaving crafting type (instead of farmers)
- Fishing jobs no longer created where bridges exist
- Exhausted mushroom logs now re-queue themselves to be constructed again
- Crafting stations will now remove items which are not used as part of the current crafting assignment
- Harvesting jobs now default to HIGHER priority if the farm plot is set to NORMAL priority
- Fix for an issue with extending stockpiles picking up the most recently placed stockpile group setting
- Fix for a crash when creating fishing jobs
- Fix for a crash when attempting to create a bridge construction job but no items are currently placed
- Japanese and Russian translations updated

Alpha 8.1.15 - 8th December 2021

- Added Add and Remove tiles buttons to room selected view
- Corrected numbering of stockpile zones
- Harvestable crops will now be harvested even if all tiles in the farm plot are not yet tilled
- Added small random offset to furniture position so adjacent looms do not flicker
- Cancelling outstanding jobs when items are displaced by digging an irrigation channel
- Added missing translations for cloth materials that could be generated with sleeping spots
- Fix for pathfinding related to fishing jobs near a bridge
- Added Chinese (simplified) translation, translated by Howard Huang
- Updated Italian and Japanese translations, thanks to AndyD and SPQR
- Better handling of unexpected errors while processing mods

Alpha 8.1.14 - 6th December 2021

- Decreased the speed at which food and drink needs decay (i.e. food and drink keeps a dwarf satisfied for longer)
- Increased the length of time a dwarf can survive while very hungry or thirsty
- Fix for corrupted save files that could occur when closing the game immediately after manually saving