@@ -1,3 +1,7 @@
+Alpha 8.1.18 - 9th February 2022
+
+- Fix for a crash when a fire does not have a location
+
 Alpha 8.1.17 - 17th January 2022
 
 - Fix for a crash when comparing very similar yet differently constructed item
